--- a/index.html
+++ b/index.html
@@ -22,11 +22,15 @@
 </head>
 
 <body>
-<div class="d-flex bg-warning">
-    <h1>Hello world</h1>
-    <p>Hi there</p>
-    <i class="fa-brands fa-instagram"></i>
+    <div class="content">
+        <p>Hello, I am</p>
+    <h2>Faith Akeyiale</h2>
+    <h1 class="mb-5">Front-end developer </h1>
+    <div>
+    <a href="#" class="btn-brand">Contact me</a>
+    </div>
 </div>
+   
 
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
