--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
     <div class="content">
-        <p>Hello, I am</p>
+        <p>👋🏾Hello, I am</p>
     <h2>Faith Akeyiale</h2>
     <h1 class="mb-5">Front-end developer </h1>
     <div>
