Add images and enhance CSS styling

--- a/index.html
+++ b/index.html
@@ -5,16 +5,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-   
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
         rel="stylesheet" />
-
 
     <link href="src/style.css" rel="stylesheet" />
 
@@ -22,17 +19,82 @@
 </head>
 
 <body>
-    <div class="content">
+    <div class="container">
         <p>👋🏾Hello, I am</p>
-    <h2>Faith Akeyiale</h2>
-    <h1 class="mb-5">Front-end developer </h1>
-    <div>
-    <a href="#" class="btn-brand">Contact me</a>
+        <h1>Faith Akeyiale</h1>
+        <h2 class="mb-5">Front-end developer </h2>
+        <div>
+            <a href="#" class="btn btn-brand">Contact me</a>
+        </div>
     </div>
-</div>
-   
+    <p class="text-center middle m-5">Turning ideas into stunning digital experiences.</p>
 
-  
+
+    <div class="content">
+        <div class="row">
+            <div class="col d-none d-lg-block">
+                <img src="src/images/roaddd.png" class="img-fluid" alt="roaddd photo"/>
+            </div>
+            <div class="col">
+                <div class="dis-project">
+                    <h2 class="mb-5">
+                        Photo App
+                    </h2>
+                    <p class="mb-5 text-muted">
+                        A powerful and elegant photo app that helps you capture life’s best moments in vivid detail. Easily organize, edit,
+                        and share your images with intuitive tools designed for both professionals and casual users. From vibrant landscapes
+                        to candid portraits, keep your memories beautifully preserved and always at your fingertips.
+                    </p>
+
+                    <a href="#" class="btn btn-branding">Learn more</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row mb-5">
+        
+        <div class="col">
+            <div class="dis-project">
+                <h2 class="mb-5">
+                    AI Poem App
+                </h2>
+                <p class="mb-5 text-muted">
+                    Generate creative poetry using artificial intelligence for any occasion. Whether you’re writing for inspiration,
+                    fun, or a special event, this app crafts unique verses that blend technology with artistic expression, helping you
+                    bring words to life effortlessly.
+                </p>
+
+                <a href="#" class="btn btn-branding">Learn more</a>
+            </div>  
+        </div>
+        <div class="col d-none d-lg-block">
+            <img src="src/images/poemm.png" class="img-fluid"  alt="poemm photo"/>
+        </div>
+    </div>
+
+    <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+            <img src="src/images/lagaccy.png" class="img-fluid" alt="lagaccy photo"/>
+        </div>
+        <div class="col">
+            <div class="dis-project">
+                <h2 class="mb-5">
+                    Place To Visit App
+                </h2>
+                
+                <p class="mb-5 text-muted">
+                    Unlock the secrets of travel with an app that guides you to extraordinary destinations. Discover hidden gems and
+                    world-famous attractions tailored to your interests. Plan unforgettable adventures with personalized
+                    recommendations, stunning photos, and insightful details that help you explore the world with confidence and
+                    curiosity.
+                </p>
+
+                <a href="#" class="btn btn-branding">Learn more</a>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/168f32d52b.js" crossorigin="anonymous"></script>
 </body>
