Add work page with new layout and styling updates in CSS

--- a/index.html
+++ b/index.html
@@ -19,18 +19,19 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="sect">
         <p>👋🏾Hello, I am</p>
         <h1>Faith Akeyiale</h1>
         <h2 class="mb-5">Front-end developer </h2>
         <div>
             <a href="#" class="btn btn-brand">Contact me</a>
         </div>
+        
     </div>
     <p class="text-center middle m-5">Turning ideas into stunning digital experiences.</p>
 
 
-    <div class="content">
+    <div class="contain">
         <div class="row">
             <div class="col d-none d-lg-block">
                 <img src="src/images/roaddd.png" class="img-fluid" alt="roaddd photo"/>
@@ -38,7 +39,7 @@
             <div class="col">
                 <div class="dis-project">
                     <h2 class="mb-5">
-                        Photo App
+                    📸Picture Gallery App
                     </h2>
                     <p class="mb-5 text-muted">
                         A powerful and elegant photo app that helps you capture life’s best moments in vivid detail. Easily organize, edit,
@@ -57,7 +58,7 @@
         <div class="col">
             <div class="dis-project">
                 <h2 class="mb-5">
-                    AI Poem App
+                    🧠 AI-Powered Poem Generator
                 </h2>
                 <p class="mb-5 text-muted">
                     Generate creative poetry using artificial intelligence for any occasion. Whether you’re writing for inspiration,
@@ -80,7 +81,7 @@
         <div class="col">
             <div class="dis-project">
                 <h2 class="mb-5">
-                    Place To Visit App
+                        🌍 Travel Guide: Places to Visit
                 </h2>
                 
                 <p class="mb-5 text-muted">
