--- a/about.html
+++ b/about.html
@@ -17,10 +17,10 @@
 </head>
 
 <body>
-<div class="section">
+<div class="content-container container">
     <div class="row align-items-center">
         <div class="col-md-6">
-            <div class="about-section">
+            <div class="content">
                 <h1 class="mt-4">Hi,</h1>
                 <h2 class="mb-5">Front-end developer based in Portugal</h2>
                 <p class="mb-5">Join me on my journey as I turn creative ideas into code and bring digital experiences
