Implement responsive header navigation

--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
 </head>
 
 <body>
+    <div class="container">
+    <nav class="d-flex justify-content-end ">
+       
+        <ul>
+            <li class=" active">
+                <a  href="/">Home</a>
+            </li>
+            <li>
+                <a  href="/about.html">About</a>
+            </li>
+            <li>
+                <a  href="/work.html">Work</a>
+            </li>
+            <li >
+                <a  href="/contact.html">Contact</a>
+            </li>
+        </ul>
+    </nav>
+    </div>
+
     <div class="sect">
         <p>👋🏾Hello, I am</p>
         <h1>Faith Akeyiale</h1>
