--- a/index.html
+++ b/index.html
@@ -114,6 +114,37 @@
                 <a href="#" class="btn btn-branding">Learn more</a>
             </div>
         </div>
+        <footer>
+            <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+                <div>
+                <h3>
+                    Work Inquiry
+                </h3>
+               
+                <p class="text-muted">
+                    Lets work together</p>
+                    </div>
+                 <div>
+                <a href="" class="btn btn-brand mb-3">Contact Me</a>
+                 </div>
+            </div>
+            <div class="d-flex justify-content-center mb-5">
+            <a href="mail:faith@gmail.com" class="email-link">
+                faith@gmail.com
+            </a>
+            </div>
+            <div class="socials d-flex justify-content-center ">
+            <a href="https://instagram.com/faith" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://github.com/mievila" target="_blank">
+                <i class="fa-brands fa-github"></i>
+            </a>
+          <a href="https://linkedin.com/faith" target="_blank">
+            <i class="fa-brands fa-linkedin"></i>
+        </a>
+       </div>
+        </footer> 
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
