--- a/about.html
+++ b/about.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="About Faith. Faith is a front-end engineer based in Portugal">
+    <title>About Faith </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -13,10 +15,29 @@
         rel="stylesheet" />
 
     <link href="src/style.css" rel="stylesheet" />
-    <title>About me</title>
+    
 </head>
 
 <body>
+    <div class="container">
+        <nav class="d-flex justify-content-end ">
+    
+            <ul>
+                <li>
+                    <a href="index.html" title="Homepage">Home</a>
+                </li>
+                <li  class=" active">
+                    <a href="about.html" title="About Faith ">About</a>
+                </li>
+                <li>
+                    <a href="work.html" title="Faith Work">Work</a>
+                </li>
+                <li>
+                    <a href="contact.html" title="Contact Faith">Contact</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
 <div class="content-container container">
     <div class="row align-items-center">
         <div class="col-md-6">
@@ -29,9 +50,47 @@
             </div>
         </div>
         <div class="col-lg-6">
-            <img src="src/images/miieeee.png" alt="" class="img-fluid">
+            <img src="src/images/miieeee.png"  class="img-fluid" alt="miieeee.photo" >
         </div>
     </div>
+</div>
+<footer class="container">
+<div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+    <div>
+        <h3>
+            Work Inquiry
+        </h3>
+
+        <p class="text-muted">
+            Lets work together</p>
+    </div>
+    <div>
+        <a href="contact.html" class="btn btn-brand mb-3" title="contact Faith">Contact Me</a>
+    </div>
+</div>
+<div class="d-flex justify-content-center mb-5">
+    <a href="mailto:faith@gmail.com" class="email-link" title="Email me">
+        faith@gmail.com
+    </a>
+</div>
+<div class="socials d-flex justify-content-center ">
+   
+    <a href="https://github.com/mievila" target="_blank" title="GitHub Profile">
+        <i class="fa-brands fa-github"></i>
+    </a>
+    <a href="https:www.linkedin.com/in/faithakeyiale" target="_blank" title="linkedin Profile">
+        <i class="fa-brands fa-linkedin"></i>
+    </a>
+</div>
+<P class="text-center mt-5">
+    This project was coded by Faith Akeyiale, and it
+    is
+    <a href="https://github.com/mievila/portfolio-project" target="_blank">
+        open-sourced
+    </a>
+   
+</P>
+</footer>
 </div>
 
 
