--- a/skills.html
+++ b/skills.html
@@ -1,7 +1,27 @@
-<section id="skills" class="container my-5">
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Faith work. Faith is a front-end engineer based in Portugal">
+    <title>Faith Work</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
+        rel="stylesheet" />
+
+    <link href="src/style.css" rel="stylesheet" />
+</head>
+
+<body>
+    <section id="skills" class="container my-5">
     <h2 class="text-center mb-5">My <span style="color: var(--primary-color);">Skills</span></h2>
     <div class="row">
-        <!-- Technical Skills -->
+        
         <div class="col-md-6">
             <h3 class="mb-4">Technical Skills</h3>
             <div class="mb-3">
@@ -68,3 +88,8 @@
         </div>
     </div>
 </section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/168f32d52b.js" crossorigin="anonymous"></script>
+    </body>
+    
+    </html>
