--- a/about.html
+++ b/about.html
@@ -33,6 +33,9 @@
                     <a href="work.html" title="Faith Work">Work</a>
                 </li>
                 <li>
+                    <a href="skills.html" title="Faith Skills">Skills</a>
+                </li>
+                <li>
                     <a href="contact.html" title="Contact Faith">Contact</a>
                 </li>
             </ul>
