--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,9 @@
                 <li>
                     <a href="work.html" title="Faith Work">Work</a>
                 </li>
+                <li>
+                    <a href="skills.html" title="Faith Skills">Skills</a>
+                </li>
                 <li class=" active">
                     <a href="contact.html" title="Contact Faith">Contact</a>
                 </li>
