--- a/work.html
+++ b/work.html
@@ -24,6 +24,7 @@
                 <li><a href="index.html" title="Homepage">Home</a></li>
                 <li><a href="about.html" title="About Faith">About</a></li>
                 <li class="active"><a href="work.html" title="Faith Work">Work</a></li>
+                <li><a href="skills.html" title="Faith Skills">Skills</a></li>
                 <li><a href="contact.html" title="Contact Faith">Contact</a></li>
             </ul>
         </nav>
@@ -33,7 +34,7 @@
         <div class="content">
             <h1 class="mb-5">Take a Look at My Projects</h1>
             <div class="row">
-                <!-- Gallery App -->
+              
                 <div class="col-md-6 mb-4 text-center">
                     <img src="src/images/Roaddd.png" class="img-fluid mb-3 rounded" alt="Roaddd photo">
                     <h4>📸 Picture Gallery App</h4>
