--- a/skills.html
+++ b/skills.html
@@ -18,6 +18,29 @@
 </head>
 
 <body>
+<div class="container">
+    <nav class="d-flex justify-content-end ">
+
+        <ul>
+            <li>
+                <a href="index.html" title="Homepage">Home</a>
+            </li>
+            <li>
+                <a href="about.html" title="About Faith ">About</a>
+            </li>
+            <li>
+                <a href="work.html" title="Faith Work">Work</a>
+            </li>
+            <li class=" active">
+                <a href="skills.html" title="Faith Skills">Skills</a>
+            </li>
+            <li >
+                <a href="contact.html" title="Contact Faith">Contact</a>
+            </li>
+        </ul>
+    </nav>
+</div>
+
     <section id="skills" class="container my-5">
     <h2 class="text-center mb-5">My <span style="color: var(--primary-color);">Skills</span></h2>
     <div class="row">
@@ -88,6 +111,7 @@
         </div>
     </div>
 </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/168f32d52b.js" crossorigin="anonymous"></script>
     </body>
