--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,11 @@
     </footer>
     </div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://kit.fontawesome.com/168f32d52b.js" crossorigin="anonymous"></script>
+</body>
 
+</html>
 
 
 
