--- a/contact.html
+++ b/contact.html
@@ -19,83 +19,9 @@
 </head>
 
 <body>
-    <div class="container">
-        <nav class="d-flex justify-content-end ">
+    
 
-            <ul>
-                <li>
-                    <a href="index.html" title="Homepage">Home</a>
-                </li>
-                <li>
-                    <a href="about.html" title="About Faith ">About</a>
-                </li>
-                <li>
-                    <a href="work.html" title="Faith Work">Work</a>
-                </li>
-                <li>
-                    <a href="skills.html" title="Faith Skills">Skills</a>
-                </li>
-                <li class=" active">
-                    <a href="contact.html" title="Contact Faith">Contact</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-    <div class=" content-container container">
-        <div class="content">
-            <h1 class="mb-5">
-                Let get in touch
-            </h1>
-            <h4>Email</h4>
-            <p>
-                <a href="faith@gmail.co">faith@gmail.co</a>
-            </p>
-            <h4>linkedin</h4>
-            <p>
-                <a href="https:www.linkedin.com/in/faithakeyiale" target="_blank">@faith code</a>
-            </p>
-            <h4>GitHub</h4>
-            <p>
-                <a href="https://github.com/mievila" target="_blank">@faith code</a>
-            </p>
-        </div>
-    </div>
-    <footer class="container">
-        <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
-            <div>
-                <h3>
-                    Work Inquiry
-                </h3>
-
-                <p class="text-muted">
-                    Lets work together</p>
-            </div>
-            <div>
-                <a href="contact.html" class="btn btn-brand mb-3" title="contact Faith">Contact Me</a>
-            </div>
-        </div>
-        <div class="d-flex justify-content-center mb-5">
-            <a href="mailto:faith@gmail.com" class="email-link" title="Email me">
-                faith@gmail.com
-            </a>
-        </div>
-        <div class="socials d-flex justify-content-center ">
-
-            <a href="https://github.com/mievila" target="_blank" title="GitHub Profile">
-                <i class="fa-brands fa-github"></i>
-            </a>
-            <a href="https:www.linkedin.com/in/faithakeyiale" target="_blank" title="linkedin Profile">
-                <i class="fa-brands fa-linkedin"></i>
-            </a>
-        </div>
-        <P class="text-center mt-5">
-            This project was coded by Faith Akeyiale, and it
-            is
-            <a href="https://github.com/mievila/portfolio-project" target="_blank">
-                open-sourced
-            </a>
-
-        </P><section id="contact" class="container my-5">
+        <section id="contact" class="container my-5">
             <h2 class="text-center mb-4">Contact <span style="color: var(--primary-color);">Me</span></h2>
             <p class="text-center mb-5">
                 Let’s work together! Fill out the form or reach me directly.
@@ -146,8 +72,7 @@
 
 
 
-    </footer>
-    </div>
+   
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://kit.fontawesome.com/168f32d52b.js" crossorigin="anonymous"></script>
