renamed Work to Projects, fixed navigation and hover, updated skills section

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
                     <a href="about.html" title="About Faith ">About</a>
                 </li>
                 <li>
-                    <a href="work.html" title="Faith Work">Work</a>
+                    <a href="project.html" title="Faith Project">Project</a>
                 </li>
                 <li>
                     <a href="skills.html" title="Faith Skills">Skills</a>
